# GSC-Wrapper

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: service-account-auth.md
gsc_wrapper/: __init__.py  account.py  enums.py  inspection.py  query.py  util.py
gsc_wrapper/aio/: __init__.py  account.py  inspection.py  query.py  transport.py
tests/: README.md  config.ini.example  config.toml.example  conftest.py  standalone_async.py  standalone_sync.py  test.py  test_account.py  test_async_account.py  test_async_inspection.py  test_async_query.py  test_async_transport.py  test_enums.py  test_inspection.py  test_inspection_report.py  test_query.py  test_query_report.py  test_search-analytics.py  test_util.py
