[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gsc_wrapper"
authors = [
    {name = "Andrea Moro", email = "info@andreamoro.eu"},
]
description = "A package to take the pain out when working with the Google Search Console API."
version = "2.1.0"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-only"}
keywords = ["google", "google search console", "gsc wrapper", "google wrapper", "wrapper", "search analytics", "page indexing", "google api"]
dependencies = [
    "google-auth-oauthlib >= 1.1.0",
    "google-api-python-client >= 2.0.0",
    "multi-args-dispatcher @ git+https://github.com/andreamoro/Dispatcher",
    "python_dateutil >= 2.8.0"
]

[project.optional-dependencies]
dev = [
    "selenium",
]
test = [
    "pytest >= 7.0",
    "pandas >= 1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Collect only the pytest suite, not the manual auth/integration script.
python_files = ["test_*.py"]
addopts = "-ra"

